new CLI class for referees